fix : align items vertically

--- a/src/app/education/education.component.scss
+++ b/src/app/education/education.component.scss
@@ -33,7 +33,6 @@
   }
 }
 
-
 .education-history {
   width: 100%;
   max-width: 970px;
@@ -45,7 +44,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
+    align-items: stretch; // to align items vertically
   }
 
   &__info {
